--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -16,6 +16,13 @@
     width: 100%; /*49VW*/
 }
 
+#hostBanner {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    transform: rotate(-90deg);
+}
+
 /* CLASSES */
 
 .is-fixed {
@@ -25,3 +32,12 @@
 /* OTHER */
 
 /* MOBILE */
+
+@media only screen and (max-width: 768px) {
+    #hostBanner {
+        position: fixed;
+        top: -32px;
+        left: -32px;
+        transform: rotate(-90deg) scale(0.5);
+    }
+}
