Fixed issue with gihub link banner where it would not correctly link to the page. Added inputs for OCG mod application.

--- a/resources/css/modApp.css
+++ b/resources/css/modApp.css
@@ -24,6 +24,29 @@ a {
     position: fixed;
 }
 
+.has-text-blurple {
+    color: #7289DA;
+}
+
+.has-text-greyple {
+    color: #99AAB5;
+}
+
+.has-text-orangered {
+    color: #FF4500;
+}
+
+.ocg-icons {
+    -webkit-transition: filter 250ms ease-in-out;
+    -moz-transition: filter 250ms ease-in-out;
+    -o-transition: filter 250ms ease-in-out;
+    transition: filter 250ms ease-in-out;
+}
+
+.ocg-icons:hover {
+    filter:blur(50px);
+}
+
 /* OTHER */
 
 /* MOBILE */
