--- a/resources/css/discord/no-decay/noDecayTournaments.css
+++ b/resources/css/discord/no-decay/noDecayTournaments.css
@@ -27,6 +27,10 @@
     width: 150px;
 }
 
+#backArrow {
+    transform: rotate(180deg)
+}
+
 /* CLASSES */
 
 .is-fixed {
@@ -86,14 +90,20 @@
     width: 150px;
 }
 
+#general-lobby-info ul li,
+#team-match-info ul li {
+    /* text-align-last: justify; */
+}
+
 #general-lobby-info ul li::before,
 #team-match-info ul li::before {
     content: "• ";
 }
 
 #general-lobby-info ul li ul li, 
-#team-match-info ul li ul li::before {
+#team-match-info ul li ul li {
     margin-left: 15px;
+    /* text-align-last: justify; */
 }
 
 #general-lobby-info ul li ul li::before, 
@@ -102,8 +112,9 @@
 }
 
 #general-lobby-info ul li ul li ul li, 
-#team-match-info ul li ul li::before {
+#team-match-info ul li ul li {
     margin-left: 30px;
+    /* text-align-last: justify; */
 }
 
 #general-lobby-info ul li ul li ul li::before, 
@@ -119,5 +130,17 @@
         top: -32px;
         right: -32px;
         transform: scale(0.5);
+    }
+
+    #menu {
+        left: -200px
+    }
+
+    #menu:hover {
+        left: 0px
+    }
+
+    #menu div.container div.columns.is-mobile div.column.is-one-half a.button.is-text {
+        text-decoration: none;
     }
 }
