attempted fix for issue with berger menu wher it would not display on click.

--- a/resources/css/discord/no-decay/noDecayTournaments.css
+++ b/resources/css/discord/no-decay/noDecayTournaments.css
@@ -133,7 +133,11 @@
     }
 
     #menu {
-        left: -200px
+        left: -200px;
+        -webkit-transition: all 250ms ease-in-out 1s;
+        -moz-transition: all 250ms ease-in-out 1s;
+        -o-transition: all 250ms ease-in-out 1s;
+        transition: all 250ms ease-in-out 1s; 
     }
 
     #menu:hover {
