--- a/resources/css/discord/no-decay/noDecayTournaments.css
+++ b/resources/css/discord/no-decay/noDecayTournaments.css
@@ -134,10 +134,10 @@
 
     #menu {
         left: -200px;
-        -webkit-transition: all 250ms ease-in-out 1s;
-        -moz-transition: all 250ms ease-in-out 1s;
-        -o-transition: all 250ms ease-in-out 1s;
-        transition: all 250ms ease-in-out 1s; 
+        -webkit-transition: all 250ms ease-in-out 500ms;
+        -moz-transition: all 250ms ease-in-out 500ms;
+        -o-transition: all 250ms ease-in-out 500ms;
+        transition: all 250ms ease-in-out 500ms;
     }
 
     #menu:hover {
