Hotfix to commit 741e477 to correct formmating issue in the codebase.

--- a/resources/css/discord/no-decay/noDecayTournaments.css
+++ b/resources/css/discord/no-decay/noDecayTournaments.css
@@ -104,7 +104,7 @@
 }
 
 #general-lobby-info ul li ul li ul li, 
-#team-match-info ul li ul li {
+#team-match-info ul li ul li ul li{
     margin-left: 60px;
     list-style: square inside;
 }
