--- a/reddit/slide/slide-manifests-alpha/css/poll-content.css
+++ b/reddit/slide/slide-manifests-alpha/css/poll-content.css
@@ -1,3 +1,5 @@
+/* Vestion 0.1.0 */
+
 /* Import Android Font*/
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 /* We should look to decenterlise this for release. Could we store this in the app's package? */
