Fixed issue with calendar elements hover.

--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -144,7 +144,7 @@ body {
 }
 
 .FullSizedCalendarDay-container:hover {
-    background-color: 
+    background-color: var(--primary);
 }
 
 .FullSizedCalendarDayHeader-date-today {
