Add right border to main pane in settings.

--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -230,5 +230,6 @@ body {
 
 .OptionsMenuPageWrapper-container {
     background-color: var(--primary);
+    border-right: 1px solid var(--secondary);
     width: 40vw !important;
 }
