--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -276,6 +276,13 @@ body {
     transition: border .35s ease-in-out;
 }
 
+/* Annoucements Channels */
+
+.PostDisplayV2-container {
+    background-color: var(--primary);
+    border: 1px solid var(--secondary);
+}
+
 /* Calendar Stuff */
 
 .FullSizedCalendarWeekdayHeader-container {
