--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -352,6 +352,18 @@ body {
     border: 1px solid var(--secondary);
 }
 
+/* Docs Channels */
+
+.DocDisplayItem-container {
+    background-color: var(--primary);
+    border: 1px solid var(--secondary);
+}
+
+.DocSummaryInfo-container {
+    background-color: var(--primary);
+    border: 1px solid var(--secondary);
+}
+
 /* Right Side Bars */
 
 .TeamPageSidebarMembersV2-container,
