--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -196,6 +196,13 @@ body {
     border: 2px solid var(--secondary);
 }
 
+.ChatEmbed-body {
+    background-color: var(--primary);
+    border-top: 1px solid calc(var(--secondary) - 75%);
+    border-bottom: 1px solid calc(var(--secondary) - 75%);
+    border-left: 1px solid calc(var(--secondary) - 75%);
+}
+
 /* Text Boxes */
 
 .DraftInputWithTitleV2-title-wrapper {
