--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -130,6 +130,18 @@ body {
     border-left: 1px solid var(--secondary);
 }
 
+/* Sections Stuff */
+
+.TeamOverviewContentItemCard-container {
+    background-color: var(--primary);
+    border: 1px solid var(--secondary);
+}
+
+.TeamApplicationInlineLink-container  {
+    background-color: var(--primary);
+    border: 1px solid var(--secondary);
+}
+
 /* Chat Centers */
 
 .NullStateV2-container {
