Added note about elements missing from styling.

--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -142,6 +142,15 @@ body {
     border: 1px solid var(--secondary);
 }
 
+/* 
+-----------------------------------------------------------------------------------------
+I have deliberatly opted to not change upsells and marketing elements related to Guilded.
+If you're reading this then I implore you to do theh same. 
+
+Elements whitelisted by this philosiphy are as follows:
+- ServerSubscriptionsSectionMemberUpsell-container
+*/
+
 /* Chat Centers */
 
 .NullStateV2-container {
