--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -128,6 +128,14 @@ body {
     color: var(--secondary);
 }
 
+.ActionMenu-container {
+	border: 1px solid var(--secondary);
+}
+
+.ActionMenu-section:not(:first-child) {
+	border-top: 1px solid var(--secondary);
+}
+
 /* Sections Stuff */
 
 .TeamOverviewContentItemCard-container {
