Added styling for calendar view filters in profiles page for Amoleded.

--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -147,6 +147,10 @@ body {
     fill: var(--secondary)
 }
 
+.FilterWrapper-container {
+    background-color: var(--primary);
+}
+
 /* Sections Stuff */
 
 .TeamOverviewContentItemCard-container {
